# omega-ai

./: Dockerfile  README.md  omega.db  omega.duckdb  pyproject.toml
.github/workflows/: ci.yml
omega/: __init__.py  app.py  cli.py  config.py  db.py  openrouter_client.py  ui.py
omega/agents/: __init__.py  browser.py  browser_agent.py  coding.py  critic.py  devops.py  executor.py  manager.py  memory.py  planner.py  research.py
omega/mcp/: __init__.py  manager.py
omega/memory/: __init__.py  manager.py  models.py
omega/plugins/: __init__.py  filesystem.py  manager.py  terminal.py
omega/sandbox/: __init__.py  docker.py  python_exec.py
omega/workflows/: __init__.py  engine.py  manager.py  schema.py
omega_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_workflow_progress.py
