[project]
name = "omega-ai"
version = "0.1.0"
description = "Omega: open-source autonomous terminal AI agent"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "OMEGA Project" }]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Code Generators"
]

dependencies = [
    "fastapi>=0.111.2",
    "uvicorn>=0.23.3",
    "typer[all]>=0.9.0",
    "sqlalchemy>=2.0.45",
    "pydantic>=2.8.0",
    "rich>=14.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "playwright>=1.46.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.4",
    "openrouter>=0.3.0",
]

[project.optional-dependencies]
testing = ["pytest>=8.4.0"]

[project.scripts]
omega = "omega.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"